<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_registration"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="@color/colorPrimary"
    tools:context="com.test.bubenivanov.mytestproj.RegistrationActivity">

    <ImageView
        android:layout_width="match_parent"
        android:id="@+id/imageView"
        android:layout_height="150dp"
        android:contentDescription="@string/app_name"
        app:srcCompat="@mipmap/abc" />

    <EditText
        android:background="#ffffff"
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/regname"
        android:hint="@string/user_name"
        android:layout_marginTop="80dp"
        android:textSize="25sp"
        />
    <EditText
        android:background="#ffffff"
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:id="@+id/regemail"
        android:hint="@string/email"
        android:layout_marginTop="20sp"
        android:textSize="25sp"
        />
    <EditText
        android:layout_marginTop="20dp"
        android:background="#ffffff"
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/regpassword"
        android:textSize="25sp"
        android:hint="@string/password"
        />

        <Button
            android:text="@string/register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/register"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            />
<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textAppearance="?android:attr/textAppearanceMedium"
    android:text="@string/backtolog"
    android:layout_gravity="center"
    android:textColor="#ffffff"
  android:id="@+id/backtolog"
    />

</LinearLayout>
