<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.test.bubenivanov.mytestproj.MainActivity"
    android:background="@color/colorPrimary"
    >

    <ImageView
        android:layout_width="match_parent"
        app:srcCompat="@mipmap/abc"
        android:id="@+id/imageView"
        android:layout_height="150dp"
        android:contentDescription="@string/app_name" />

    <EditText
        android:background="#ffffff"
        android:textAlignment="center"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:inputType="textPersonName"
               android:ems="10"
               android:id="@+id/user_name"
        android:hint="User Name"
        android:layout_marginTop="80dp"
        android:textSize="25dp"
         />

    <EditText
        android:layout_marginTop="20dp"
        android:background="#ffffff"
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/pass"
        android:textSize="25dp"
        android:hint="@string/password"
         />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"

        >


        <Button
            android:background="?android:attr/selectableItemBackground"
            android:text="@string/Sing_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/Sing_in"
            android:textColor="#FFFFFF"
            android:layout_weight="1" />

        <Button
            android:background="?android:attr/selectableItemBackground"
            android:text="@string/sing_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/Sing_up"
            android:layout_weight="1"
            android:textColor="#FFFFFF"
            />

    </LinearLayout>

</LinearLayout>
